# router/router.go
@@ -4,13 +4,16 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	v1 "zldface_server/api/v1"
 	"zldface_server/config"
 	_ "zldface_server/docs"
 	"zldface_server/middleware"
 )
 
 func Routers() *gin.Engine {
+	gin.DefaultWriter = config.Logger
 	var Router = gin.Default()
+	Router.MaxMultipartMemory = config.Config.System.MultipartMemory // 限制表单内存
 	//Router.StaticFS(global.GVA_CONFIG.Local.Path, http.Dir(global.GVA_CONFIG.Local.Path))
 	// Router.Use(middleware.LoadTls())  // 打开就能玩https了
 	config.Logger.Info("use middleware logger")
@@ -33,6 +36,10 @@ func Routers() *gin.Engine {
 		}
 	}
 	{
+		PrivateGroup.POST("faceImage/v1", v1.SaveFaceImage) // 只允许40个并发
+		PrivateGroup.GET("faceFeature/v1", v1.GetFaceFeature)
+		PrivateGroup.POST("featureCompare/v1", v1.CompareFaceFeature)
+		PrivateGroup.POST("faceCompare/v1", v1.CompareFaceFile)
 		InitGroupRouter(PrivateGroup) // 注册功能api路由
 		InitUserRouter(PrivateGroup)
 	}
